--- a/css/style.css
+++ b/css/style.css
@@ -61,4 +61,21 @@ button{
     color: white;
 }
 
+/* Aqui comienza página de pérfil */
 
+.profile-body{
+    background: #f1f3fa;
+}
+.profile{
+    margin: 20px 0;
+}
+.profile-sidebar{
+    padding: 20px 0 10px 0;
+    background: #fff;
+}
+.profile.user-pic{
+    float: none;
+    margin: 0 auto;
+    width: 50%;
+    height: 50%;
+}
