--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 
-body{
+.body-login{
 background:url(../img/fondo1.jpg)no-repeat center center fixed ;
 background-size: cover;
 }
@@ -8,7 +8,7 @@ background-size: cover;
     margin: 0 auto;
     margin-top: 25%;
     padding: 0;
-     
+
 }
 .modal-content{
     background-color: #3b4652;
@@ -40,7 +40,7 @@ background-size: cover;
     position: absolute;
     left: 28px;
     font-size: 22px;
-    padding-top: 4px;  
+    padding-top: 4px;
 }
 
 .form-group#user-group::before{
@@ -55,27 +55,16 @@ button{
 }
 .forgot{
     padding: 5px 0;
-    
+
 }
 .forgot a{
     color: white;
 }
 
 /* Aqui comienza página de pérfil */
-
-.profile-body{
-    background: #f1f3fa;
+#fila1-perfil{
+    margin: 20px;
 }
-.profile{
-    margin: 20px 0;
-}
-.profile-sidebar{
-    padding: 20px 0 10px 0;
-    background: #fff;
-}
-.profile.user-pic{
-    float: none;
-    margin: 0 auto;
-    width: 50%;
-    height: 50%;
+#sociales-perfil a{
+    margin: 20px 0; 
 }
