--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,6 +2,7 @@ body{
 background-image: url("../imagenes/backgroundd.jpg");
 font-family: sans-serif;
 color: grey;
+
 }
 a{
   text-decoration: none;
@@ -141,7 +142,7 @@ max-width: 40%;
 }
 #footerr{
   background-color: #880011;
-  margin-top: 30px;
+  margin-top: 50px;
   width: 100%;
   height: 100%;
   border-radius: 40px;
@@ -469,4 +470,37 @@ p#precio_cart {
   }
   .forgot a{
       color: white;
+  }
+
+  /* acá va registro*/
+  h1 {
+    display: flex;
+    justify-content: center;
+    font-family: sans-serif;
+    border-style: double;
+    border-color: rgba(105,105,105,0.7);
+    border-radius: 5px;
+  }
+  #form_registro {
+  flex-flow: column wrap;
+  align-content: center;
+  margin-left: 8.33%;
+  margin-right: 8.33%;
+  position: relative;
+  top: 50px;
+  margin-left: 0 auto;
+  }
+  #title {
+    text-align: center;
+  }
+  .container{
+    text-align: center;
+  }
+  label {
+    position: relative;
+    right: 10px;
+    margin-top: 15px;
+  }
+  button {
+    margin-top: 15px;
   }
