--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -1,4 +1,5 @@
 body{
+background-image: url("../imagenes/backgroundd.jpg");
 font-family: sans-serif;
 color: grey;
 
@@ -63,7 +64,7 @@ h5{
 h5::after,h5::before{
   content: "";
   position: absolute;
-  width: 100vw;
+  width: 36vw;
   height: 1px;
   background-color: grey;
   top: 0.6em;
