--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -1,4 +1,6 @@
+/*INICIO*/
 body{
+background-image: url("../imagenes/backgroundd.jpg");
 font-family: sans-serif;
 color: grey;
 }
@@ -54,23 +56,23 @@ nav{
   padding-left: 0px;
   padding-right: 0px;
 }
-h5{
+.titulo{
   display: inline-block;
   position: relative;
   color: grey;
 }
-h5::after,h5::before{
+.titulo::after,.titulo::before{
   content: "";
   position: absolute;
-  width: 100vw;
+  width: 36vw;
   height: 1px;
   background-color: grey;
   top: 0.6em;
 }
-h5::before{
+.titulo::before{
   left: 102%;
 }
-h5::after{
+.titulo::after{
   right: 102%;
 }
 #computadora{
@@ -139,8 +141,8 @@ max-width: 40%;
   margin-top: 20px;
 }
 #footerr{
-  background-color: #880011;
-  margin-top: 30px;
+  background-color: #892417;
+  margin-top: 50px;
   width: 100%;
   height: 100%;
   border-radius: 40px;
@@ -152,9 +154,8 @@ aside ul{
 aside ul li a{
   color: grey;
 }
-footer{
-  width: 100%;
-  color: black;
+#desplegue_redes{
+  margin-bottom: 55px;
 }
 html {
   min-height: 100%;
@@ -262,13 +263,11 @@ text-decoration: underline;
 }
 .btn-danger{
   background-color:#892517;
-  padding-top:20px;
+  padding-top: 8px;
   border: none;
   color: grey;
 }
-.boton{
 
-}
 .iconos{
   margin-top:42%;
 }
@@ -283,8 +282,7 @@ text-decoration: underline;
 #lista{
   list-style-type: square;
 }
-body{
-}
+
 @media (max-width: 768px){
   #regresar{
       width:108%;
@@ -372,14 +370,26 @@ body{
     padding-left: 6.5vw;
   }
 }
-
+article#item {
+  border-style: solid;
+  border-color: rgba(105,105,105,0.7);
+  border-radius: 5px;
+  background-color: white;
+  font-style: italic;
+}
+p#precio_cart {
+  font-style: normal;
+  font-weight: 600;
+}
 /**#main_section{
+
 }
 #container_carousel{
   width: 100px;
   height: 200px;
 }
 .carousel-inner{
+
 }
 #navegacion{
   width: 100%;
@@ -391,3 +401,106 @@ body{
   margin:20px;
 }
 /* */
+#compra-actual-perfil{
+  opacity: .5;
+}
+#prod-relacionados{
+  background:grey;
+  margin-top: 40px;
+}
+
+/* acá comienza productos */
+#productos{
+  display: flex;
+}
+
+
+/* acá comienza login */
+.body-login{
+
+  }
+
+  .main-section{
+      margin: 0 auto;
+      margin-top: 25%;
+      padding: 0;
+
+  }
+  .modal-content{
+      background-color: #3b4652;
+      opacity: .75;
+      padding: 0 20px;
+      box-shadow: 0px 0px 3px #848484;
+
+  }
+  .user-img{
+      margin-top:-80px;
+      margin-bottom: 35px;;
+  }
+  .user-img img{
+      width: 100px;
+      height: 100px;
+      box-shadow: 0px 0px 3px #848484;
+      border-radius: 50%;
+  }
+  .form-group input{
+      height: 42px;
+      font-size: 18px;
+      border: 0;
+      padding-left: 34px;
+      border-radius: 10px;
+  }
+
+  .form-group::before{
+      font-family: "Font Awesome\ 5 Free";
+      position: absolute;
+      left: 28px;
+      font-size: 22px;
+      padding-top: 4px;
+  }
+
+    button{
+      width: 60%;
+      margin: 5px 0 25px;
+  }
+  .forgot{
+      padding: 5px 0;
+
+  }
+  .forgot a{
+      color: white;
+  }
+
+  /* acá va registro*/
+  h1 {
+    display: flex;
+    justify-content: center;
+    font-family: sans-serif;
+    border-style: double;
+    border-color: rgba(105,105,105,0.7);
+    border-radius: 5px;
+  }
+  #form_registro {
+  flex-flow: column wrap;
+  align-content: center;
+  margin-left: 8.33%;
+  margin-right: 8.33%;
+  position: relative;
+  top: 50px;
+  margin-left: 0 auto;
+  }
+  #title {
+    text-align: center;
+  }
+  .container{
+    text-align: center;
+    z-index: -1;
+  }
+  label {
+    position: relative;
+    right: 10px;
+    margin-top: 15px;
+  }
+  button {
+    margin-top: 15px;
+  }
