--- a/css/form_contacto.css
+++ b/css/form_contacto.css
@@ -1,4 +1,4 @@
-body{
+/* body{
 background-image: url("imagenes/backgroundd.jpg");
 font-family: sans-serif;
 color: grey;
@@ -6,7 +6,7 @@ color: grey;
 nav {
   z-index: 100;
 }
-h1 {
+/* h1 {
   display: flex;
   justify-content: center;
   font-family: sans-serif;
@@ -14,8 +14,8 @@ h1 {
   border-color: rgba(105,105,105,0.7);
   border-radius: 5px;
   z-index: -10;
-}
-.container {
+} */
+/* .container {
   border-style: double;
   border-color: rgba(105,105,105,0.7);
   border-radius: 5px;
@@ -35,9 +35,9 @@ h1 {
   top: 50px;
   margin-left: 0 auto;
   width: 900px;
-}
+} */
 
-#msj_contacto_cartel {
+/* #msj_contacto_cartel {
   height: 100px;
   margin-top: 20px;
 
@@ -57,4 +57,4 @@ h1 {
 
 #mail_contacto {
   margin-top: 20px;
-}
+} */
